<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">麦库记事</string>
	
	<string name="login_name">盛大通行证</string>
    <string name="user_name">昵称</string>
	<string name="login_pass">密 码</string>

    <string name="signup_login_name">通行证帐号: (由4-16位字母和数字,首位为字母)</string>
    <string name="signup_login_pass">设置密码: (由6-10位字母和数字组成)</string>
	
	<!-- Activity Title -->
	<string name="title_main">麦库记事</string>
	<string name="title_login">登录</string>
	<string name="sign_up">免费快速注册 >>></string>
    <string name="welcome_tip">用麦库记事,存备忘\n安全快捷,永不丢失</string>
    <string name="sign_up_btn">注册</string>
    <string name="activate_title">激活帐号</string>
    <string name="activate_btn">马上激活</string>
	<string name="title_category">文档分类</string>
	<string name="title_note_list">文档列表</string>
	<string name="title_note_detail">文档内容</string>
	<string name="title_userprofile">帐号信息</string>
	<string name="title_note_add">新建</string>
	<string name="title_category_add">新建分类</string>
	<string name="title_note_category_add">新建分类</string>
	<string name="title_category_edit">编辑</string>
	<string name="title_category_delete">删除分类</string>
	<string name="title_category_deleteTip">确定要删除此分类么？\n分类下的文档将同时被删除。</string>
	
	<string name="title_note_delete">删除文档</string>
    <string name="str_delete_sucess">删除成功</string>
	<string name="title_note_deleteTip">是否确定删除此文档？</string>

    <string name="title_note_down">下载附件</string>
	<string name="title_note_downTip">是否下载%1s？</string>

    <string name="title_note_open">打开附件</string>
	<string name="title_note_openTip">是否确定打开%1s？</string>

	<!-- Input Hint -->
	<string name="note_add_body">输入文档内容</string>
	<string name="note_add_title">输入文档标题(可选)</string>
	<string name="note_add_cate">选择文档分类</string>
    <string name="category_type">类型</string>
	<string name="note_add_tag">输入标签(可选)</string>
	<string name="note_add_file">上传文件</string>
	<string name="note_voice_tip">请说普通话</string>

    <string name="title_note_uploadError">提示</string>
    <string name="buttion_enter">确认</string>
	<string name="title_note_uploadTip">上传发生错误,文件将被保存在 %1s 中,请稍后重试</string>
	
	
	<string name="submit">提交</string>
	<string name="down">下载</string>
	<string name="open">打开</string>
	<string name="cancel">取消</string>
	<string name="ok">返回</string>
	
	<!-- Tips -->
	<string name="loading">载入中...</string>
	<string name="empty">数据为空.</string>
	
	<string name="search_label">输入文档关键字</string>
    <string name="search_hint">输入文档关键字</string>
    
    <string name="web_view_error">某些网页元素不能加载</string>
    
    <!-- Preferences -->
    <string name="pref_show">显示设置</string>
    <string name="pref_show_image">文档显示图片</string>
    <string name="pref_show_image_sum">是否显示文档内容里的图片</string>
    
    <!-- Menus -->
    <string name="menu_new_note">新建笔记</string>
    <string name="menu_new_category">新建分类</string>
    <string name="menu_list">分类</string>
    <string name="menu_search">搜索</string>
    <string name="menu_about">关于</string>
    <string name="menu_logout">注销</string>
    <string name="menu_quit">退出</string>
    <string name="menu_save">保存</string>
    <string name="menu_add_attach">添加附件</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_fresh">更新</string>
    <string name="menu_sync">同步</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_send">分享</string>
    <string name="menu_refresh">同步</string>
    
    
    <!-- Add -->
    <string name="add_simple_note">快速文档</string>
    <string name="add_full_note">详细文档</string>
    <string name="add_file_note">上传文件</string>
    <string name="add_camera_note">拍照上传</string>
    <string name="add_voice_note">录音输入</string>
    <string name="add_voice_file_note">录音记录</string>

    <string name="about_us">麦库记事是一个免费、永久在线、安全的个人知识管理平台。您可以用电脑、手机等设备,随时随地在麦库里保存笔记、备忘、写文档、存资料,并可以方便的整理和分享。麦库空间永久有效。\n\n网址：http://note.sdo.com \n\n公司：上海盛大网络\n邮箱：note@snda.com</string>
    <string name="copyright">note.sdo.com</string>
    
    <string name="connection_error">您的网络不可用</string>
    <string name="openapi_init_error">初始化登录失败</string>
    <string name="openapi_login_error">您输入的盛大通行证和密码不匹配，请确认后重新输入</string>
    <string name="login_property_miss_error">请您输入通行证或密码</string>


    <string name="sync_not_connection_error">没有可用的网络</string>
    <string name="api_error">请求失败,请检查您的网络连接</string>
    <string name="sync_socket_connection_error">网络请求异常,请检查您的网络连接</string>
    <string name="sync_needdown_error">下载列表异常</string>
    <string name="sync_downNoteList_error">下载笔记列表异常</string>
    <string name="sync_change_error">同步变更错误</string>
    <string name="sync_changeRemote_error">远程变更下载失败</string>

    <string name="note_copy_file">拷贝文件中,请稍候...</string>
    <string name="note_save">保存中,请稍候...</string>
    <string name="note_save_success">保存成功</string>
    <string name="note_save_error">同步失败,保存为离线数据</string>
    <string name="file_copy_error">文件创建失败,请重试</string>
    <string name="alert_login">请您先登录  </string>

    <string name="alert_not_support_file">无法打开该类型文件</string>
    <string name="alert_download_attach_error">下载附件失败</string>
    <string name="alert_remote_file_delete">文档已经被删除</string>

    <string name="sync_loading">同步中,请您稍候...</string>
    <string name="sync_downloading">下载中,请您稍候...</string>
    <string name="sync_logining">登录中,请您稍候...</string>
    <string name="sync_activate">激活中,请您稍候...</string>
    <string name="sync_sucess">同步完成</string>
    <string name="sync_begin">开始同步数据</string>

    <string name="not_save_note_alert_title">提示</string>
    <string name="not_save_note_alert">是否保存该文档</string>
    <string name="not_save_note_btn_yes">是</string>
    <string name="not_save_note_btn_no">否</string>

    <string name="empty_note_alert">文档内容不能为空哦</string>
    <string name="str_wait">请稍候</string>
    <string name="menu_remove_attach">删除附件</string>
    <string name="error_note_null">请输入文档标题或内容</string>
    <string name="update_app_tip">发现新版本,是否升级</string>
    <string name="switch_web_login">切换登录模式</string>
    <string name="login_error">登录失败,用户名或密码错误</string>
    <string name="loading_note_to_local">正在下载数据到本地</string>
    <string name="username_null_error">昵称不能为空</string>
    <string name="username_contain_space_error">昵称中不能包含空格</string>
    <string name="username_already_use_error">该昵称已经被使用</string>
    <string name="category_private_type">(私有)</string>
    <string name="category_public_type">(公开)</string>
    <string name="richtext_warning">富文本编辑模式下,只能追加内容</string>
    <string name="empty_note_title_and_content_warring">请输入文档标题或内容</string>
    <string name="private_category_section_title">私有分类</string>
    <string name="public_category_section_title">公开分类</string>
    <string name="please_wait_for_load_dialog">请稍候</string>
    <string name="public_category">公开</string>
    <string name="view_note">查看</string>
    <string name="edit_note">编辑</string>
    <string name="del_note">删除</string>
    <string name="search_label_text">搜索:</string>
    <string name="snda_account_null_error">盛大通行证不能为空</string>
    <string name="snda_account_length_error">通行证帐号长度需要在4-16之间</string>
    <string name="password_null_error">密码不能为空</string>
    <string name="password_length_error">密码长度需要在6-10之间</string>
    <string name="snda_account_start_not_with_letter_error">通行证帐号需要以字母开头</string>
    <string name="snda_account_already_use_error">该用户名已经被注册</string>
    <string name="register_network_error">请检查您的网络连接状况</string>
    <string name="register_error">注册失败</string>
    <string name="please_login_first_warring">请您登录后使用</string>
    <string name="last_sync_time_format">上次同步时间: yyyy年MM月dd日hh点mm分</string>
    <string name="snda_accout_login_error">通行证或密码错误</string>
    <string name="clean_user_login_cache_error">清除用户缓存出错</string>
    <string name="error_at_login_set_user">设置用户信息出错</string>
    <string name="login_need_activate_warring">通行证还没有激活,请先到官网(http://note.sdo.com)激活~</string>

</resources>
