<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_add_note"
          android:title="@string/menu_new_note"
          android:icon="@drawable/ic_menu_add">
    </item>

    <!--<item android:id="@+id/menu_search"-->
          <!--android:checkable="true"-->
          <!--android:title="@string/menu_search"-->
          <!--android:icon="@drawable/ic_menu_search">-->
    <!--</item>-->
    <item android:id="@+id/menu_add_category"
          android:title="@string/menu_new_category"
          android:icon="@drawable/ic_menu_add">
    </item>
    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh"
          android:icon="@drawable/ic_menu_refresh">
    </item>
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          android:icon="@drawable/ic_menu_info_details">
    </item>


    <item android:id="@+id/menu_logout"
          android:title="@string/menu_logout"
          android:icon="@drawable/ic_menu_blocked_user">
    </item>
    <item android:id="@+id/menu_quit"
          android:title="@string/menu_quit"
          android:icon="@drawable/ic_menu_close_clear_cancel">
    </item>

</menu>