<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="#f7f7f7"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="49dip"
            android:background="@drawable/header_background"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true">
        <TextView
                android:id="@+id/header_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/header_title"
                android:textColor="@drawable/white"
                android:gravity="center"
                android:textSize="24dip"
                android:text="@string/title_login"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="vertical">
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_name"/>

            <Button android:id="@+id/switchButton"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="#8bc084"
                    android:text="@string/switch_web_login"/>
        </RelativeLayout>
        <EditText
                android:id="@+id/login_name"
                android:layout_width="fill_parent"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/login_pass"/>
        <EditText
                android:id="@+id/login_pass"
                android:layout_width="fill_parent"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:password="true"
                android:layout_height="wrap_content"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/login_button"
                    android:layout_width="145dip"
                    android:layout_height="48dip"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/login_button"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>