<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#f7f7f7">
    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="49dip"
            android:background="@drawable/header_background">
        <TextView
                android:id="@+id/header_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/header_title"
                android:textColor="@drawable/white"
                android:gravity="center"
                android:textSize="24dip"
                android:text="@string/sign_up_btn"/>
    </RelativeLayout>

    <ScrollView android:layout_width="fill_parent"
                android:layout_margin="10dip"
                android:scrollbarDefaultDelayBeforeFade="0"
                android:layout_height="wrap_content">
        
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                       android:layout_gravity="center"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:text="@string/signup_login_name"/>
            <EditText
                    android:id="@+id/login_name"
                    android:layout_width="fill_parent"
                    android:paddingBottom="10dip"
                    android:singleLine="true"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:text="@string/signup_login_pass"/>
            <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="fill_parent"
                    android:paddingBottom="10dip"
                    android:singleLine="true"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/signup_button"
                    android:layout_width="fill_parent"
                    android:layout_height="44dip"
                    android:text="@string/sign_up_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
