<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/header_background"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true">
        <TextView
                android:id="@+id/header_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/header_title"
                android:textColor="@drawable/white"
                android:gravity="center"
                android:textSize="24dip"
                android:text="@string/title_main"/>
        <ImageButton
                android:id="@+id/header_left_btn"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dip"
                android:scaleType="matrix"
                android:layout_height="fill_parent"
                android:paddingTop="15dip"
                android:layout_width="100dip"
                android:background="@null"
                style="@style/header_btn_add"/>
        <ImageButton
                android:id="@+id/header_right_btn"
                android:layout_alignParentRight="true"
                android:layout_width="100dip"
                android:layout_height="fill_parent"
                android:scaleType="matrix"
                android:paddingTop="15dip"
                android:paddingLeft="66dip"
                android:background="@null"
                style="@style/header_btn_refresh"/>
    </RelativeLayout>
    <!--
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="41px"
         android:background="@drawable/search_bg"
         android:gravity="center">
         <Button
             android:id="@+id/search_btn"
             android:layout_width="fill_parent"
             android:layout_height="31px"
             android:layout_marginLeft="5px"
             android:layout_marginRight="5px"
             android:background="@drawable/search" />
     </LinearLayout>
     -->

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">
        <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:dividerHeight="1px"
                android:background="#ffffffff"
                />
        <LinearLayout android:id="@+id/load"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center">
            <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    style="@style/loadTxt"
                    android:text="@string/loading"/>
        </LinearLayout>
        <TextView
                android:id="@+id/empty"
                android:text="@string/empty"
                android:visibility="gone"
                style="@style/emptyTxt"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
    </FrameLayout>
</LinearLayout>
